# hummbl

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  ACCESSIBILITY_AUDIT_REPORT.md  ACCESSIBILITY_AUDIT_RESULTS.txt  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  Makefile  PROGRESS_UPDATE.md  README.md  REPO_BOUNDARY_POLICY.md  REPO_PERMISSIONS_MODEL.md  dependency_pins.json  index.html  layer_map.json  manifest.md  namespace_ledger.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  turbo.json  vercel.json  vite.config.optimized.ts  vite.config.ts
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  copilot-instructions.md
backend/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
discovery/: MIGRATION_PLAN.md  README.md  ecosystem-map.md  governance-patterns.md  platform-architecture.md  shared-cognition.md
ecosystem/: founder-mode.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
hummbl/: __init__.py  __main__.py  analyzer.py  capture.py  cli.py  peptide_protocol.py  peptide_rules.py  planner.py  protocols.py  reasoning.py  visualize.py
load-tests/: auth-flow.js  health-check.js  rate-limit.js  run-tests.sh  spike-test.js  stress-test.js
public/: debug.html  test.html
scripts/: accessibility-audit.js  accessibility-audit.sh  accessibility-audit.ts  check_caes_hash.py  check_kernel_imports.py  check_layer_map.py  check_namespace_ledger.py  check_pins.py  lighthouse-audit.sh  migrate.ts  (+5 more)
(+154 files in other folders)
